[package]
name = "ying_long"
license = "MIT"
version = "0.1.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2018"

description = "This is a Digital Circuits Logic description language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# proc-macro = true

[dependencies]
lazy_static = "1.4.0"
# syn = "1.0"
# quote = "1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
