[package]
name = "ying_long"
license = "MIT"
version = "0.1.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2018"

description = "This is a Digital Circuits Logic description language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# proc-macro = true

[[bin]]
name = "ying_long"
path = "src/main.rs"

[lib]
name = "libyinglong"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"

pest = "2.1.3"
pest_derive = "2.1.0"

rayon = "1.5.3"
